# pr2_calibration

./: .hgignore  .travis.yml  README.md  stack.xml
dense_laser_assembler/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
dense_laser_assembler/scripts/: assembler_node.py
dense_laser_assembler/src/: dense_laser_assembler.cpp
dense_laser_assembler/src/dense_laser_assembler/: dense_laser_cache.py
laser_joint_processor/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
laser_joint_processor/include/laser_joint_processor/: joint_image_interpolator.h  joint_imager.h
laser_joint_processor/src/: joint_image_interpolator.cpp  joint_imager.cpp  laser_joint_processor.cpp  laser_joint_processor_node.cpp
laser_joint_processor/test/: CMakeLists.txt  interp_snapshot_unittest.cpp  joint_image_interpolator_unittest.cpp  laser_joint_processor_unittest.cpp
laser_joint_projector/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
laser_joint_projector/src/: laser_joint_projector.cpp  laser_joint_projector_node.cpp
pr2_calibration/: CHANGELOG.rst  CMakeLists.txt  package.xml  package.xml~
pr2_calibration_launch/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
pr2_calibration_launch/capture_data/: all_pipelines.launch  all_viewers.launch  capture_exec_pr2.launch  capture_exec_pr2_se.launch  double_stereo_pipeline.launch  double_stereo_viewer.launch  head_mount_kinect.launch  intersection.launch  laser_pipelines.launch  laser_post_process.launch  pr2_exec.py  pr2_sample_chooser.py  prosilica.launch  prosilica_kinect.launch  robot_cal_tilt_profile.py  teleop_grippers.launch
pr2_calibration_launch/capture_data/hardware_config/: cam_config.yaml  laser_config.yaml
pr2_calibration_launch/capture_data/samples_pr2_beta/0_far/: config.yaml  far_0000.yaml
pr2_calibration_launch/capture_data/samples_pr2_beta/1_left/: config.yaml  l_arm_0000.yaml  l_arm_0001.yaml  l_arm_0002.yaml  l_arm_0003.yaml  l_arm_0004.yaml  l_arm_0005.yaml  l_arm_0006.yaml  l_arm_0007.yaml  l_arm_0008.yaml  l_arm_0009.yaml  l_arm_0010.yaml  l_arm_0011.yaml  l_arm_0014.yaml  l_arm_0015.yaml  l_arm_0016.yaml  l_arm_0018.yaml  l_arm_0019.yaml  l_arm_0025.yaml  l_arm_0028.yaml  l_arm_0029.yaml  l_arm_0030.yaml  l_arm_0031.yaml
pr2_calibration_launch/capture_data/samples_pr2_beta/2_right/: config.yaml  r_arm_0000.yaml  r_arm_0001.yaml  r_arm_0002.yaml  r_arm_0003.yaml  r_arm_0004.yaml  r_arm_0005.yaml  r_arm_0006.yaml  r_arm_0007.yaml  r_arm_0008.yaml  r_arm_0009.yaml  r_arm_0010.yaml  r_arm_0011.yaml  r_arm_0015.yaml  r_arm_0020.yaml  r_arm_0021.yaml  r_arm_0025.yaml  r_arm_0026.yaml  r_arm_0028.yaml  r_arm_0029.yaml  r_arm_0030.yaml  r_arm_0031.yaml
pr2_calibration_launch/capture_data/samples_pr2_beta/far/: far_0000.yaml
pr2_calibration_launch/capture_data/samples_pr2_beta/left/: l_arm_0000.yaml  l_arm_0001.yaml  l_arm_0010.yaml  l_arm_0016.yaml  l_arm_0017.yaml  l_arm_0018.yaml  l_arm_0019.yaml  l_arm_0020.yaml  l_arm_0031.yaml
pr2_calibration_launch/capture_data/samples_pr2_beta/right/: r_arm_0000.yaml  r_arm_0001.yaml  r_arm_0011.yaml  r_arm_0019.yaml  r_arm_0020.yaml  r_arm_0021.yaml
pr2_calibration_launch/estimate_params/: estimate_pr2_beta_urdf.sh  estimate_pr2_se_beta_urdf.sh  head_then_arms_params.launch  pr2_se_params.launch
pr2_calibration_launch/estimate_params/config_pr2_beta/: free_arms_only_1.yaml  free_head_laser_0.yaml  free_head_laser_1.yaml  free_head_laser_2.yaml  free_head_laser_3.yaml  free_head_laser_4.yaml  pr2_se_system.yaml  sensors.yaml  system.yaml
pr2_calibration_launch/intrinsics/: calibrate_forearm_left.launch  calibrate_forearm_right.launch  calibrate_narrow_stereo.launch  calibrate_prosilica.launch  calibrate_prosilica_kinect.launch  calibrate_wide_stereo.launch
pr2_calibration_launch/pr2_urdf_parser_py/urdf_parser_py/xml_reflection/: basics.py  core.py
pr2_calibration_launch/test/: pr2_fk_ref.cpp  pr2_head_fk_unittest.py  pr2_left_arm_fk_unittest.py  pr2_right_arm_fk_unittest.py  test_pr2_fk.launch
pr2_calibration_launch/verify_urdf/: verify_pr2_beta_uncalibrated.launch  verify_pre_calibrated.launch  verify_pre_uncalibrated.launch  verify_prf_calibrated.launch  verify_prf_uncalibrated.launch
pr2_calibration_launch/view_results/: head_arm_config.yaml  head_laser_config.yaml  view_forearm_scatter.sh  view_head_arm_scatter.sh  view_head_laser_scatter.sh
pr2_calibration_launch/write_urdf/: propagate_baseline.py  write_pr2_cam_intrinsics.sh
pr2_dense_laser_snapshotter/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
pr2_dense_laser_snapshotter/gtest/: CTestTestfile.cmake  Makefile
pr2_dense_laser_snapshotter/src/: dense_laser_snapshotter.cpp
pr2_se_calibration_launch/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  verify_pr2_se_uncalibrated.launch
pr2_se_calibration_launch/capture_data/: all_pipelines.launch  all_viewers.launch  capture_data.launch  capture_exec_pr2.launch  port_samples.py  pr2_se_exec.py  prosilica_1MP.launch
pr2_se_calibration_launch/capture_data/hardware_config_left/: cam_config.yaml  controller_config.yaml  laser_config.yaml
pr2_se_calibration_launch/capture_data/hardware_config_right/: chain_config.yaml
pr2_se_calibration_launch/capture_data/samples_pr2_se_left/far/: far_0000.yaml
pr2_se_calibration_launch/capture_data/samples_pr2_se_right/far/: far_0000.yaml
pr2_se_calibration_launch/capture_data/samples_pr2_se_right/right/: r_arm_0000.yaml  r_arm_0001.yaml  r_arm_0002.yaml  r_arm_0003.yaml  r_arm_0004.yaml  r_arm_0005.yaml  r_arm_0006.yaml  r_arm_0007.yaml  r_arm_0008.yaml  r_arm_0009.yaml  r_arm_0010.yaml  r_arm_0011.yaml  r_arm_0012.yaml  r_arm_0013.yaml  r_arm_0014.yaml  r_arm_0015.yaml  (+11 more)
pr2_se_calibration_launch/estimate_params/: calibrate_pr2_se.sh  estimate_pr2_se_urdf.launch  estimation_config.launch
pr2_se_calibration_launch/estimate_params/config_pr2_se/: free_arms.yaml  free_cameras.yaml  free_cb_locations.yaml  free_laser.yaml  sensors.yaml  system.yaml
pr2_se_calibration_launch/write_urdf/: update_pr2_se_urdf.py  write_pr2_se.sh
(+25 files in other folders)
