<package>
  <name>laser_joint_processor</name>
  <version>1.0.4</version>
  <description>Computes joint angles associated with a specific set of detected checkerboard corners.
     This package is experimental and unstable.
     Expect its APIs to change.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/laser_joint_processor</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Vijay Pradeep</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>settlerlib</build_depend>
  <build_depend>joint_states_settler</build_depend>
  <build_depend>opencv2</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>settlerlib</run_depend>
  <run_depend>joint_states_settler</run_depend>
  <run_depend>opencv2</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>message_filters</test_depend> -->
  <!-- <test_depend>settlerlib</test_depend> -->
  <!-- <test_depend>joint_states_settler</test_depend> -->
  <!-- <test_depend>opencv2</test_depend> -->

</package>
