<package>
  <name>laser_joint_projector</name>
  <version>1.0.11</version>
  <description>Projects laser readings into a point cloud, based on a set of recorded joint angles
     This package is experimental and unstable.
     Expect its APIs to change.</description>
  <maintainer email="dave@cse.unr.edu">Dave Feil-Seifer</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/laser_joint_projector</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Vijay Pradeep</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>calibration_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>cmake_modules</run_depend>
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>calibration_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>calibration_msgs</test_depend> -->
  <!-- <test_depend>kdl_parser</test_depend> -->
  <!-- <test_depend>orocos_kdl</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->

</package>

