<?xml version="1.0"?>
<package>
  <name>pr2_calibration</name>
  <version>1.0.5</version>
  <description>The pr2_calibration package</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>dense_laser_assembler</run_depend>
  <run_depend>laser_joint_processor</run_depend>
  <run_depend>laser_joint_projector</run_depend>
  <run_depend>pr2_calibration_launch</run_depend>
  <run_depend>pr2_dense_laser_snapshotter</run_depend>
  <run_depend>pr2_se_calibration_launch</run_depend>


  <export>
      <metapackage />
  </export>
</package>
