<package format="3">
  <name>pr2_calibration_launch</name>
  <version>1.0.12</version>
  <description>Launch files and configuration files needed to run the calibration pipeline on PR2. This package is
     still experimental. Expect large changes tp occur.</description>
  <maintainer email="dave@cse.unr.edu">Dave Feil-Seifer</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/pr2_calibration_launch</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Vijay Pradeep</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>calibration_msgs</build_depend>
  <build_depend>calibration_estimation</build_depend>
  <build_depend>calibration_launch</build_depend>
  <build_depend>pr2_dense_laser_snapshotter</build_depend>
  <build_depend>laser_cb_detector</build_depend>
  <build_depend>laser_joint_processor</build_depend>
  <build_depend>laser_joint_projector</build_depend>
  <build_depend>stereo_image_proc</build_depend>
  <build_depend>image_cb_detector</build_depend>
  <build_depend>monocam_settler</build_depend>
  <build_depend>image_view</build_depend>
  <build_depend>robot_mechanism_controllers</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pr2_teleop</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <!--<build_depend>python_orocos_kdl</build_depend>-->
  <build_depend>kdl_parser</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>calibration_msgs</exec_depend>
  <exec_depend>calibration_estimation</exec_depend>
  <exec_depend>calibration_launch</exec_depend>
  <exec_depend>pr2_dense_laser_snapshotter</exec_depend>
  <exec_depend>laser_cb_detector</exec_depend>
  <exec_depend>laser_joint_processor</exec_depend>
  <exec_depend>laser_joint_projector</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>
  <exec_depend>image_cb_detector</exec_depend>
  <exec_depend>monocam_settler</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>robot_mechanism_controllers</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pr2_teleop</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python_orocos_kdl</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>calibration_msgs</test_depend> -->
  <!-- <test_depend>calibration_estimation</test_depend> -->
  <!-- <test_depend>calibration_launch</test_depend> -->
  <!-- <test_depend>pr2_dense_laser_snapshotter</test_depend> -->
  <!-- <test_depend>laser_cb_detector</test_depend> -->
  <!-- <test_depend>laser_joint_processor</test_depend> -->
  <!-- <test_depend>laser_joint_projector</test_depend> -->
  <!-- <test_depend>stereo_image_proc</test_depend> -->
  <!-- <test_depend>image_cb_detector</test_depend> -->
  <!-- <test_depend>monocam_settler</test_depend> -->
  <!-- <test_depend>image_view</test_depend> -->
  <!-- <test_depend>robot_mechanism_controllers</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>pr2_teleop</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>rostest</test_depend> -->
  <!-- <test_depend>kdl</test_depend> -->
  <!-- <test_depend>python_orocos_kdl</test_depend> -->
  <!-- <test_depend>kdl_parser</test_depend> -->

</package>

