<package>
  <name>pr2_dense_laser_snapshotter</name>
  <version>1.0.9</version>
  <description>Stores the data from a series of laser scan messages in a dense representation, allowing
     users to easily perform image-like operations on intensity or range data. This package is
     experimental. Expect APIs to change.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/pr2_dense_laser_snapshotter</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Vijay Pradeep</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>dense_laser_assembler</build_depend>
  <build_depend>pr2_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>dense_laser_assembler</run_depend>
  <run_depend>pr2_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>dense_laser_assembler</test_depend> -->
  <!-- <test_depend>pr2_msgs</test_depend> -->

</package>

