<package>
  <name>pr2_se_calibration_launch</name>
  <version>1.0.5</version>
  <description>pr2_se_calibration_launch</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_se_calibration_launch</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Adam Leeper</author>
  <author>Vijay Pradeep</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2_calibration_launch</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2_calibration_launch</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pr2_calibration_launch</test_depend> -->

</package>

